--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,12 +32,17 @@ jobs:
         
     - name: Run Docker container
       run: |
-        docker run -d -p 8080:5000 --name flask-app-container flask-app:latest
+        docker run -d -p 5000:5000 --name flask-app-container flask-app:latest
+    
+    - name: Check Docker container logs
+      run: |
+        sleep 5 # Give the container some time to start
+        docker logs flask-app-container    
     
     - name: Test application
       run: |
         sleep 5 # Give the container some time to start
-        curl http://localhost:8080
+        curl http://localhost:5000
         
     - name: Stop and remove container
       run: |
