--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,10 +9,9 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
-    
+        
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
@@ -25,6 +24,16 @@ jobs:
     - name: Run tests
       run: |
         python -m unittest discover tests
+
+    # 현재 시간을 YYYYMMDDHHMMSS 형식으로 설정
+    - name: Get current time
+      run: echo "CURRENT_TIME=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV    
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}        
     
     - name: Build Docker image
       run: |
@@ -49,4 +58,3 @@ jobs:
         docker stop flask-app-container
         docker rm flask-app-container
 
-    # Optional: Add additional steps to push the Docker image to a registry like Docker Hub
