--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,11 +23,7 @@ jobs:
         
     - name: Run tests
       run: |
-        python -m unittest discover tests
-
-    # 현재 시간을 YYYYMMDDHHMMSS 형식으로 설정
-    - name: Get current time
-      run: echo "CURRENT_TIME=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV    
+        python -m unittest discover tests 
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -38,10 +34,15 @@ jobs:
     - name: Build Docker image
       run: |
         docker build -t flask-app:latest .
+        docker tag flask-app:latest ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
+    
+    - name: Push Docker image to Docker Hub
+      run: |
+        docker push ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
         
     - name: Run Docker container
       run: |
-        docker run -d -p 5000:5000 --name flask-app-container flask-app:latest
+         docker run -d -p 5000:5000 --name flask-app-container ${{ secrets.DOCKER_USERNAME }}/flask-app:latest
     
     - name: Check Docker container logs
       run: |
@@ -50,7 +51,7 @@ jobs:
     
     - name: Test application
       run: |
-        sleep 5 # Give the container some time to start
+        sleep 10 # Give the container some time to start
         curl http://localhost:5000
         
     - name: Stop and remove container
